# ManoDhvani

./: .gitignore  Audio_processing_1.py  README.md  app.py  audio_features.csv  feature_extract.py  main.py  notebook4d369ea10d (1).ipynb  pyproject.toml  requirements.txt  speech_to_text.py  test.py  whisper_transcriber.py
NLP/: nlp_analysis.py
components/: audio_input.py  audio_visualiser.py  emotion_classifier.py  log_manager.py  transcription.py  urgency_classifier.py
data/: logs.csv
keywords/: keywords.py
utils/: setup_ffmpeg.py
