[project]
name = "manodhvani"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "openai-whisper @ git+https://github.com/openai/whisper.git@main",
    "numpy>=2.2.5",
    "praat-parselmouth>=0.4.5",
]
